wired up hub endpoint, added test endpoint to test

--- a/conf/default.yaml
+++ b/conf/default.yaml
@@ -2,5 +2,7 @@ plugins:
   hapi-method-loader:
     _enabled: false
   hapi-slack:
+    tags:
+      - 'docker-hub'
     slackHook: '{{ENV.SLACK_HOOK}}'
     channel: '{{ENV.SLACK_CHANNEL}}'
